acceptance test: upload files to GCS

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -128,3 +128,16 @@ jobs:
         with:
           name: reports_all
           path: output
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+      - name: Upload reports to Google Cloud Storage
+        id: upload-files
+        if: always()
+        uses: google-github-actions/upload-cloud-storage@main
+        with:
+          path: output/
+          destination: bucket-name
