--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -13,6 +13,7 @@ on:
       - 'formatting.yml'
       - 'test_pack_dock.yml'
       - 'triage.yml'
+      - 'acceptance_test.yml'
   pull_request:
     branches: [ master ]
     paths-ignore:
@@ -25,6 +26,7 @@ on:
       - 'formatting.yml'
       - 'test_pack_dock.yml'
       - 'triage.yml'
+      - 'acceptance_test.yml'
 jobs:
   validate_gradle_wrapper:
     runs-on: ubuntu-latest
