--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -6,7 +6,13 @@ on:
     paths-ignore:
       - '**.md'
 jobs:
+  validate_gradle_wrapper:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: gradle/wrapper-validation-action@v1
   pack-snapshot:
+    needs: [ validate_gradle_wrapper ]
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
@@ -48,6 +54,7 @@ jobs:
           name: gtfs-validator-snapshot
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   pack-master:
+    needs: [ validate_gradle_wrapper ]
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
