--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
   pack-snapshot:
-    needs: [ validate_gradle_wrapper ]
+    needs: [ validate-gradle-wrapper ]
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
@@ -54,7 +54,7 @@ jobs:
           name: gtfs-validator-snapshot
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   pack-master:
-    needs: [ validate_gradle_wrapper ]
+    needs: [ validate-gradle-wrapper ]
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
