--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -113,16 +113,16 @@ jobs:
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
         env:
-          TYPE: ${{ secrets.TYPE }}
-          PROJECT_ID: ${{ secrets.PROJECT_ID }}
-          PRIVATE_KEY_ID: ${{ secrets.PRIVATE_KEY_ID }}
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          CLIENT_EMAIL: ${{ secrets.CLIENT_EMAIL }}
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          AUTH_URI: ${{ secrets.AUTH_URI }}
-          TOKEN_URI: ${{ secrets.TOKEN_URI }}
-          AUTH_PROVIDER_X509_CERT_URL: ${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}
-          CLIENT_X509_CERT_URL: ${{ secrets.CLIENT_X509_CERT_URL }}
+          MD_TYPE: ${{ secrets.MD_TYPE }}
+          MD_PROJECT_ID: ${{ secrets.MD_PROJECT_ID }}
+          MD_PRIVATE_KEY_ID: ${{ secrets.MD_PRIVATE_KEY_ID }}
+          MD_PRIVATE_KEY: ${{ secrets.MD_PRIVATE_KEY }}
+          MD_CLIENT_EMAIL: ${{ secrets.MD_CLIENT_EMAIL }}
+          MD_CLIENT_ID: ${{ secrets.MD_CLIENT_ID }}
+          MD_AUTH_URI: ${{ secrets.MD_AUTH_URI }}
+          MD_TOKEN_URI: ${{ secrets.MD_TOKEN_URI }}
+          MD_AUTH_PROVIDER_X509_CERT_URL: ${{ secrets.MD_AUTH_PROVIDER_X509_CERT_URL }}
+          MD_CLIENT_X509_CERT_URL: ${{ secrets.MD_CLIENT_X509_CERT_URL }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
   get-reports:
