--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -42,6 +42,10 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+      - name: Explore folder
+        run: |
+          pwd
+          ls
       - name: Package cli app jar with Gradle
         uses: eskatos/gradle-command-action@v1
         env:
