--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -27,6 +27,11 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+      - name: Persist gradle cache
+        uses: actions/upload-artifact@v2
+        with:
+          name: gradle-cache
+          path: ~/.gradle/caches
   pack-snapshot:
     needs: [ validate-gradle-wrapper ]
     runs-on: ubuntu-latest
@@ -51,6 +56,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Retrieve gradle packages cache
+        uses: actions/download-artifact@v2
+        with:
+          name: gradle-cache
       - name: Package cli app jar with Gradle
         uses: eskatos/gradle-command-action@v1
         env:
@@ -88,6 +97,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Retrieve gradle packages cache
+        uses: actions/download-artifact@v2
+        with:
+          name: gradle-cache
       - name: Package cli app jar with Gradle
         uses: eskatos/gradle-command-action@v1
         env:
