--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -163,8 +163,8 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@master
         with:
-          project_id: ${{ secrets.MD_PROJECT_ID }}
-          service_account_key: ${{ secrets.MD_SA_KEY }}
+          project_id: ${{ secrets.VALIDATOR_PROJECT_ID }}
+          service_account_key: ${{ secrets.VALIDATOR_SA_KEY }}
           export_default_credentials: true
       - name: Upload reports to Google Cloud Storage
         id: upload-files
