--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   validate-gradle-wrapper:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'acceptance test')"
+    if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
@@ -108,7 +108,7 @@ jobs:
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   fetch-urls:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'acceptance test')"
+    if: "contains(github.event.head_commit.message, 'acceptance test')"
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v1
