--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -15,11 +15,13 @@ on:
       - 'end_to_end.yml'
       - 'end_to_end_big.yml'
       - 'end_to_end_100.yml'
-
+concurrency:
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
 jobs:
   validate-gradle-wrapper:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'acceptance test')"
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
@@ -109,7 +111,7 @@ jobs:
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   fetch-urls:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'acceptance test')"
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v1
