--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -21,7 +21,7 @@ concurrency:
 jobs:
   validate-gradle-wrapper:
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, '[acceptance test skip]') }}
+    if: ${{ contains(github.event.head_commit.message, '[acceptance test skip]') }}
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
@@ -111,7 +111,7 @@ jobs:
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   fetch-urls:
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, '[acceptance test skip]') }}
+    if: ${{ contains(github.event.head_commit.message, '[acceptance test skip]') }}
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v1
