--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -43,19 +43,7 @@ jobs:
         env:
           COMMIT_FILTER: "[acceptance test skip]"
         run: |
-          # Get last commit message
-          readonly local last_commit_log=$(git log -1 --pretty=format:"%s")
-          echo "last commit log: $last_commit_log"
-
-          readonly local filter_count=$(echo "$last_commit_log" | grep -c "$COMMIT_FILTER" )
-          echo "number of occurence of '$COMMIT_FILTER' in '$last_commit_log': $filter_count"
-
-          if [[ "$filter_count" -eq 0 ]]; then
-            echo "all good, continue"
-          else
-            echo "the last commit log \"$last_commit_log\" contains \"$COMMIT_FILTER\", stopping"
-            exit 78
-          fi
+          echo "${{toJson(github.event)}}"
   validate-gradle-wrapper:
     needs: [ check-commit-message ]
     runs-on: ubuntu-latest
