--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -88,6 +88,11 @@ jobs:
         with:
           name: gtfs-validator-snapshot
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
+      - name: Persist comparator snapshot jar
+        uses: actions/upload-artifact@v2
+        with:
+          name: comparator-snapshot
+          path: output-comparator/build/libs/output-comparator-${{ steps.prep.outputs.versionTag }}_cli.jar
   pack-master:
     needs: [ validate-gradle-wrapper ]
     runs-on: ubuntu-latest
@@ -201,3 +206,23 @@ jobs:
         with:
           path: ${{ github.sha }}/output
           destination: gtfs-validator-reports
+  compare-outputs:
+    needs: get-reports
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download comparator .jar file from previous job
+        uses: actions/download-artifact@v2
+        with:
+          name: comparator-snapshot
+      - name: Retrieve reports from previous job
+        uses: actions/download-artifact@v2
+        with:
+          name: gtfs-validator-reports
+      - name: Generate acceptance report test
+        run: |
+          java -jar output-comparator*.jar --report_directory ${{ github.sha }}/output --new_error_threshold 1 --reference_report_name reference.json --latest_report_name report.json --percent_invalid_datasets_thrshold 10 --output_base ${{ github.sha }}/acceptance-test-output
+      - name: Persist acceptance test report
+        uses: actions/upload-artifact@v2
+        with:
+          name: acceptance_test_report
+          path: ${{ github.sha }}/acceptance-test-output
