--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -89,7 +89,9 @@ jobs:
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
       - name: debug
         run: |
-          ls -a
+          ls output-comparator/
+          ls output-comparator/build
+          ls output-comparator/build/libs
       - name: Persist comparator snapshot jar
         uses: actions/upload-artifact@v2
         with:
