add _cli to version name

--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'org.mobilitydata'
-version "${System.getenv("versionTag")}"
+version "${System.getenv("versionTag")}_cli"
 
 sourceCompatibility = JavaVersion.VERSION_11
 
