--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -225,3 +225,15 @@ jobs:
         with:
           name: acceptance_test_report
           path: ${{ github.sha }}/acceptance-test-output
+      - name: Comment PR with acceptance test report
+        uses: actions/github-script@v4
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            REPORT=$(jq . ${{ github.sha }}/acceptance-test-output/acceptance_report.json -c)
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "Acceptance test have been run. Here are the results: ```json $REPORT```."
+            })
