--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -137,32 +137,14 @@ jobs:
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   fetch-urls:
     if: "!contains(needs.pre_ci.outputs.commit_message, '[acceptance test skip]')"
-    needs: pre_ci
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository code
-        uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          pip install -r scripts/mobility-database-harvester/requirements.txt
       - name: Set URL matrix
         id: set-matrix
         run: |
-          python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d datasets_metadata -a gtfs_archives_ids.json -l latest_versions.json
-          DATASETS=$(jq . datasets_metadata/latest_versions.json -c)
+          DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/test)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
-        env:
-          MD_TYPE: ${{ secrets.MD_TYPE }}
-          MD_PROJECT_ID: ${{ secrets.MD_PROJECT_ID }}
-          MD_PRIVATE_KEY_ID: ${{ secrets.MD_PRIVATE_KEY_ID }}
-          MD_PRIVATE_KEY: ${{ secrets.MD_PRIVATE_KEY }}
-          MD_CLIENT_EMAIL: ${{ secrets.MD_CLIENT_EMAIL }}
-          MD_CLIENT_ID: ${{ secrets.MD_CLIENT_ID }}
-          MD_AUTH_URI: ${{ secrets.MD_AUTH_URI }}
-          MD_TOKEN_URI: ${{ secrets.MD_TOKEN_URI }}
-          MD_AUTH_PROVIDER_X509_CERT_URL: ${{ secrets.MD_AUTH_PROVIDER_X509_CERT_URL }}
-          MD_CLIENT_X509_CERT_URL: ${{ secrets.MD_CLIENT_X509_CERT_URL }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
   get-reports:
@@ -217,6 +199,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: reports_all
+      - name: Debug
+        run: |
+          ls
       - name: Generate acceptance report test
         run: |
           java -jar output-comparator*.jar --report_directory ${{ github.sha }}/output --new_error_threshold 1 --reference_report_name reference.json --latest_report_name report.json --percent_invalid_datasets_threshold 10 --output_base ${{ github.sha }}/acceptance-test-output
