debug: use env variable

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -209,17 +209,18 @@ jobs:
           path: ${{ github.sha }}/acceptance-test-output
       - name: Get acceptance report
         run: |
-          export REPORT=$(jq . ${{ github.sha }}/acceptance-test-output/acceptance_report.json)
+          export REPORT=$
           echo "::set-env name=REPORT::$REPORT"
       - name: Comment PR with acceptance test report
         uses: actions/github-script@v4
+        env:
+          REPORT: ${{ (jq . ${{ github.sha }}/acceptance-test-output/acceptance_report.json) }}
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            echo $REPORT
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "Acceptance test have run. Here are the results: ```json $REPORT ```."
+              body: "Acceptance test have run on commit $github.event.. Here are the results: ```json $REPORT ```."
             })
