--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -209,8 +209,9 @@ jobs:
           path: ${{ github.sha }}/acceptance-test-output
       - name: Get acceptance report
         run: |
-          export REPORT=$(jq . ${{ github.sha }}/acceptance-test-output/acceptance_report.json)
-          echo "REPORT=REPORT" >> $GITHUB_ENV
+          export REPORT_VALUE=$(jq . ${{ github.sha }}/acceptance-test-output/acceptance_report.json)
+          echo "REPORT=REPORT_VALUE" >> $GITHUB_ENV
+          echo $REPORT_VALUE
       - name: Comment PR with acceptance test report
         uses: actions/github-script@v4
         with:
@@ -220,5 +221,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "Acceptance test have run. Here are the results: ```json ${{ env.REPORT }} ```."
+              body: "Acceptance test have run on commit ${{ github.sha }}. More details bellow: ```json ${{ env.REPORT }} ```."
             })
