--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -210,7 +210,7 @@ jobs:
       - name: Get acceptance report
         run: |
           export REPORT_VALUE=$(jq . ${{ github.sha }}/acceptance-test-output/acceptance_report.json)
-          echo "REPORT=REPORT_VALUE" >> $GITHUB_ENV
+          echo "REPORT=$REPORT_VALUE" >> $GITHUB_ENV
           echo $REPORT_VALUE
       - name: Comment PR with acceptance test report
         uses: actions/github-script@v4
