--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -211,7 +211,6 @@ jobs:
         run: |
           export REPORT_VALUE=$(jq . ${{ github.sha }}/acceptance-test-output/acceptance_report.json -R)
           echo "REPORT=$REPORT_VALUE" >> $GITHUB_ENV
-          echo $REPORT_VALUE
       - name: Comment PR with acceptance test report
         uses: actions/github-script@v4
         with:
@@ -221,5 +220,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "Acceptance test have run on commit ${{ github.sha }}. More details bellow: ```${{ env.REPORT }}```."
+              body: "Acceptance test have run on commit ${{ github.sha }}. More details bellow: ```${{ fromJson(${{env.REPORT}}) }}```."
             })
