--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -220,6 +220,6 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "Acceptance test have run on commit ${{ github.sha }}. More details bellow: ```${{ fromJson(${{env.REPORT}}) }}```."
+              body: "Acceptance test have run on commit ${{ github.sha }}. More details bellow: ```${{fromJson($env.REPORT}}```."
             })
 
