update enable emoji use on windows

--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -47,4 +47,5 @@ shadowJar {
 }
 
 mainClassName = 'org.mobilitydata.gtfsvalidator.outputcomparator.cli.Main'
+compileJava.options.encoding = "UTF-8"
 
